--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -5,6 +5,7 @@
     <title>Explore</title>
     <link href="index.css" rel="stylesheet"/>
     <link href="../vendors/bootstrap/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../vendors/bootstrap/bootstrap.min.css" rel="stylesheet"/>
     <link href="index.css" rel="stylesheet"/>
     <link href="explore.css" rel="stylesheet"/>
     <link href="../vendors/fontawesome-free-5.15.4-web/css/all.css" rel="stylesheet"/>
