--- a/public/oldTuiter/tuiter/explore.html
+++ b/public/oldTuiter/tuiter/explore.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>Explore</title>
     <link href="index.css" rel="stylesheet"/>
-    <link href="../vendors/bootstrap/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../vendors/bootstrap/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../../vendors/bootstrap/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../../vendors/bootstrap/bootstrap.min.css" rel="stylesheet"/>
     <link href="index.css" rel="stylesheet"/>
     <link href="explore.css" rel="stylesheet"/>
-    <link href="../vendors/fontawesome-free-5.15.4-web/css/all.css" rel="stylesheet"/>
+    <link href="../../vendors/fontawesome-free-5.15.4-web/css/all.css" rel="stylesheet"/>
 </head>
 <body>
 <div class="container">
